--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "draw"]
 	path = draw
 	url = https://github.com/watchout-tw/draw
+[submodule "map"]
+	path = map
+	url = https://github.com/watchout-tw/map
